--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://gitlab.com/sepia-photos/authentication-service#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jose": "^3.1.0",
     "mongoose": "^5.10.15",
