--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "authentication-service",
   "version": "0.1.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www"
